Ensure text remains visible during webfont load

--- a/src/assets/styles/base/_webfonts.scss
+++ b/src/assets/styles/base/_webfonts.scss
@@ -1,7 +1,8 @@
 @font-face {
-  font-family: "Figtree";
-  font-weight: 100 900;
-  src        : url("/assets/fonts/Figtree-var.ttf") format("truetype");
+  font-family : "Figtree";
+  font-display: swap;
+  font-weight : 100 900;
+  src         : url("/assets/fonts/Figtree-var.ttf") format("truetype");
 }
 
 @font-feature-values "Figtree" {
@@ -16,30 +17,34 @@
 
 @font-face {
   font-family            : "Fraunces";
-  font-variation-settings: "SOFT" 100, "WONK" 0, "wght" 350;
+  font-display           : swap;
+  font-variation-settings: "SOFT"100, "WONK"0, "wght"350;
   font-weight            : 100 900;
   src                    : url("/assets/fonts/Fraunces-var.ttf") format("truetype");
 }
 
 @font-face {
   font-family            : "Fraunces";
+  font-display           : swap;
   font-style             : italic;
-  font-variation-settings: "SOFT" 100, "WONK" 0, "wght" 350;
+  font-variation-settings: "SOFT"100, "WONK"0, "wght"350;
   font-weight            : 100 900;
   src                    : url("/assets/fonts/Fraunces-ital-var.ttf") format("truetype");
 }
 
 @font-face {
-  font-family:  "Source Code Pro";
-  src: 
+  font-family : "Source Code Pro";
+  font-display: swap;
+  src         :
     url("/assets/fonts/SourceCodeVariable-Roman.ttf") format("truetype"),
     url("/assets/fonts/SourceCodeVariable-Roman.otf") format("opentype");
 }
 
 @font-face {
-  font-family: "Source Code Pro";
-  font-style: italic;
-  src        :
+  font-family : "Source Code Pro";
+  font-display: swap;
+  font-style  : italic;
+  src         :
     url("/assets/fonts/SourceCodeVariable-italic.ttf") format("truetype"),
     url("/assets/fonts/SourceCodeVariable-italic.otf") format("opentype");
 }
